# categorize_transactions

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Details.md  LICENSE  README.md  build_docker.sh  entrypoint.sh  makefile  mkdocs.yml  pyproject.toml  run_pipeline_locally.sh  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml
artifacts/brazilian-credit/input_model/: transformed_MiBolsillo.parquet
artifacts/brazilian-credit/output/: predictions.parquet
artifacts/brazilian-credit/transformations/: transformers.pkl
categorize_transactions/: data_pulling.py  hosted_pipeline.py  predict.py  train.py
categorize_transactions/configs/: schema.py  utils.py
docker/: Dockerfile
docs/: api.md  installation.md  usage.md
tests/: test_predict.py
